# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md
betterocaml/: Makefile  aoc.opam  dune  dune-project
betterocaml/lib/: util.ml
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/: ocaml.dune-package  ocaml.install
ocaml/_build/default/lib/: ocaml.cmxs
ocaml/_build/default/lib/.merlin-conf/: lib-ocaml
ocaml/_build/default/lib/.ocaml.objs/byte/: ocaml.cmt
ocaml/_build/default/test/.merlin-conf/: exe-ocaml
ocaml/_build/default/test/.ocaml.eobjs/byte/: dune__exe__Ocaml.cmti
rust/src/: binary.rs  dive.rs  main.rs  sonar_sweep.rs
