(lang dune 3.10)

(name aoc)

(generate_opam_files true)

(source
 (github njdup/advent-of-code))

(authors "dupe")

(maintainers "dupe")

(package
  (name aoc)
  (synopsis "A short synopsis")
  (description "A longer description")
  (depends
    (ocaml
      (>= 5.1.0))
    (dune
      (and
        :build
        (>= 3.11.1)))
    (alcotest
      (and
        :with-test
        (>= 1.7.0)))
    (ppx_inline_alcotest
      (and
        :with-test
        (>= 1.0.0)))))

